<resources>
    <string name="app_name">MShare</string>
    <string name="action_settings">Settings</string>

    <string name="titletextview">Title:</string>
    <string name="tripledot">...</string>
    <string name="artisttextview">Artist:</string>
    <string name="linktextview">Link:</string>
    <string name="datetextview">Publish date:</string>
    <string name="addsongbutton">Add song</string>
    <string name="updatesongbutton">Update song</string>
    <string name="deletesongbutton">Delete song</string>
    <string name="sendsongbutton">Send song</string>
    <string name="viewsongsbutton">View songs</string>
    <string name="addnewsongbutton">New song</string>
    <string name="listtitle">Songs</string>

</resources>
